Image Modal shift fixed

--- a/Assets/Stylesheets/index.css
+++ b/Assets/Stylesheets/index.css
@@ -2,6 +2,7 @@
 body {
   margin: 0px 0px 0px 0px;
   background-color: #CCCCCC;
+  padding: 0px 0px 0px 0px !important;
 }
 
 #left-body {
@@ -90,8 +91,9 @@ img {
 
 /*  Modal CSS  */
 .modal-open {
-  padding-right: 0px !important;
+  overflow-y: scroll;
 }
+
 .modal-content {
   left: 50%; top: 50%;
   transform: translate(-50%, -50%);
@@ -182,7 +184,7 @@ img {
   height: 50%;
 }
 
-/*  Images display in basic Modal  */
+/*  Images display in Modal  */
 .workflow-img {
   width: 100%;
 }
@@ -210,9 +212,14 @@ img {
     cursor: pointer;
 }
 
-.modal-img-p {
-  text-align: center;
+#variable-modal-img {
+  left: 50%; top: 50%;
+  transform: translate(-50%, -50%);
+  width: 50%;
+  height: 75%;
+  overflow: hidden;
 }
+
 
 /*  Rules for when screen is xs  */
 @media (max-width: 767px) {
